namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istioproject
  labels:
    istio-injection: enabled
