deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment-v1
  namespace: istioproject
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        version: v1
    spec:
      containers:
        - name: api-container
          image: juliocesarmidia/todo-vue:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: api-port
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "300m"
      restartPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment-v2
  namespace: istioproject
  labels:
    version: v2
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        version: v2
    spec:
      containers:
        - name: api-container
          image: juliocesarmidia/todo-vue:v2.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: api-port
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "300m"
      restartPolicy: Always
