todoapp-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-deployment-v1
  namespace: default
  labels:
    version: v1

spec:
  replicas: 1

  selector:
    matchLabels:
      app: todoapp

  template:
    metadata:
      labels:
        app: todoapp
        version: v1

    spec:
      containers:
        - name: todoapp-container
          image: juliocesarmidia/todo-vue:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "300m"

      restartPolicy: Always

# kubectl autoscale deployment todoapp-deployment-v1 --cpu-percent=50 --min=1 --max=10
