todoapp-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-deployment-v2
  namespace: default
  labels:
    version: v2

spec:
  replicas: 1

  selector:
    matchLabels:
      app: todoapp

  template:
    metadata:
      labels:
        app: todoapp
        version: v2

    spec:
      containers:
        - name: todoapp-container
          image: juliocesarmidia/http-simple-api:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: todoapp-port

          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "300m"

      restartPolicy: Always

# kubectl autoscale deployment todoapp-deployment-v2 --cpu-percent=50 --min=1 --max=10
