api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: istio-project

spec:
  type: ClusterIP
  selector:
    app: api

  ports:
  - port: 80
    targetPort: api-port
    protocol: TCP
