api.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-project
  labels:
    istio-injection: enabled

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment-v1
  namespace: istio-project
  labels:
    version: v1

spec:
  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api
        version: v1

    spec:
      containers:
        - name: api-container
          image: juliocesarmidia/todo-vue:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: api-port

          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "300m"

      restartPolicy: Always

# kubectl autoscale deployment api-deployment-v1 --cpu-percent=50 --min=1 --max=10
# kubectl logs -f ${POD_NAME} -c istio-proxy

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment-v2
  namespace: istio-project
  labels:
    version: v2

spec:
  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api
        version: v2

    spec:
      containers:
        - name: api-container
          image: juliocesarmidia/todo-vue:v2.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: api-port

          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "300m"

      restartPolicy: Always

# kubectl autoscale deployment api-deployment-v2 --cpu-percent=50 --min=1 --max=10
# kubectl logs -f ${POD_NAME} -c istio-proxy

---

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: istio-project

spec:
  type: ClusterIP
  selector:
    app: api

  ports:
  - port: 80
    targetPort: api-port
    protocol: TCP
