service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: istioproject
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - port: 80
    targetPort: api-port
    protocol: TCP
