todoapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp
  namespace: default

spec:
  type: ClusterIP
  selector:
    app: todoapp

  ports:
  - port: 80
    targetPort: todoapp-port
    protocol: TCP
