api-virtual-svc-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
  namespace: istio-project

spec:
  hosts:
  - "*"

  gateways:
  - api-gateway

  http:
  - route:
    - destination:
        host: api
        subset: v1
      weight: 75

    - destination:
        host: api
        subset: v2
      weight: 25

# kubectl get virtualservice.networking.istio.io/api
# kubectl describe virtualservice.networking.istio.io/api
