destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destinationrule
  namespace: istioproject
spec:
  host: api.istioproject.svc.cluster.local
  trafficPolicy:
    # loadBalancer:
    #   simple: LEAST_CONN
    #   RANDOM, ROUND_ROBIN, LEAST_CONN
    loadBalancer:
      consistentHash:
        useSourceIp: true
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destinationrulecircuitbreaker
  namespace: istioproject
spec:
  host: api.istioproject.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 20
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
