todoapp-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: todoapp-destination-rule
  namespace: default

spec:
  host: todoapp
  subsets:
  - name: v1
    labels:
      version: v1

  - name: v2
    labels:
      version: v2

# kubectl get destinationrule.networking.istio.io/todoapp-destination-rule
# kubectl describe destinationrule.networking.istio.io/todoapp-destination-rule
