todoapp-virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todoapp
  namespace: default

spec:
  hosts:
  - "*"

  gateways:
  - todoapp-gateway

  http:
  - route:
    - destination:
        host: todoapp
        subset: v1
      weight: 75

    - destination:
        host: todoapp
        subset: v2
      weight: 25

# kubectl get virtualservice.networking.istio.io/todoapp
# kubectl describe virtualservice.networking.istio.io/todoapp
