virtualservicecanary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
  namespace: istioproject
spec:
  hosts:
  - "*"
  gateways:
  - api-gateway
  http:
  - route:
    - destination:
        host: api
        subset: v1
      weight: 50
    - destination:
        host: api
        subset: v2
      weight: 50
